project page updates

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -1,16 +1,17 @@
 ---
 layout: project
-quote: We all got LOGO TATTOOS! 
+quote: We all got LOGO TATTOOS!
 client: Bittercube Bitters
 status: active
-summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
+summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products,
+philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
 completion_date:
-hero_image: /assets/img/projects/bittercube-project/bittercube-hero.jpg
+hero_image: /assets/img/projects/bittercube-project/bittercube-work-banner.jpg
 featured_image: /assets/img/projects/bittercube-project/bittercube-feature.jpg
 tags:
-  - branding
-  - web
-  - illustration
+- branding
+- web
+- illustration
 ---
 
 <section class="pt-0">
@@ -18,65 +19,76 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content editable">
-          <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009.</p>
-          <p>Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and
-          team. And once they saw the new logo, every one of ‘em had a new tattoo!</p>
-        </div> 
+          <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any
+            kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since
+            2009.</p>
+          <p>Bittercube needed to elevate their brand to match the quality and sophistication of their products,
+            philosophy, and
+            team. And once they saw the new logo, every one of ‘em had a new tattoo!</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
-<section class="bg-navy text-white">
+<div class="bg-image bg-fixed aspect-hero my-5" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg)"></div>
+<section>
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-5">
+      <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <img src="/assets/img/projects/bittercube-project/bittercube-project-01.png" class="img-fluid" alt="Bittercube Logo">
-        </div>
-      </div>
-      <div class="col-md-7">
-        <div class="content">
-          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the
-          individual elements of the original ID if at all possible. The dropper and cube of bitters nearly phonetically spelled
-          out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion for true cra
-          smanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same ideas to
-          their rebrand.</p>
+          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to
+            maintain
+            the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
+            phonetically
+            spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
+            for
+            true
+            craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply
+            the
+            same
+            ideas to their rebrand.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section>
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <img src="/assets/img/projects/bittercube-project/bittercube-project-02.jpg" class="img-fluid" alt="Bittercube Bitters image">
-          <p class="lead mt-5">We created a custom wordmark and bespoke, hand drawn illustrations for each product offering.</p>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-01.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-02.jpg)"></div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="bg-image aspect-hero" style="background-image: url('/assets/img/projects/bittercube-project/bittercube-project-03.jpg');">
-
-</section>
-<section>
-  <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-4">
+      <div class="col-md-6">
         <div class="content">
-          <img src="/assets/img/projects/bittercube-project/bittercube-project-04.jpg" class="img-fluid" alt="Bittercube logo tattoo image">
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <div class="content">
-          <p class="lead">One of the boys proudly sharing his new ink. #Bittercube4lyfe!</p>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-04.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="https://via.placeholder.com/1200x600?text=Website+feature" class="img-fluid" alt="">
         </div>
       </div>
     </div>
   </div>
-</section>
-<section class="bg-image aspect-hero" style="background-image: url('/assets/img/projects/bittercube-project/bittercube-project-05.jpg');">
-
 </section>
