--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -3,17 +3,18 @@ layout: project
 quote: Learn to ride? More like learn to rip.
 client: Burton Snowboards
 status: active
-summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.'
+summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an
+even more mysterious structure, the whole thing needed to get more down to earth.'
 completion_date: 2013-08-01 00:00:00
 featured_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
 hero_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
 gallery:
-  - image:
-    caption:
+- image:
+caption:
 tags:
-  - strategy
-  - branding
-  - web
+- strategy
+- branding
+- web
 ---
 
 <section class="pt-0">
@@ -22,9 +23,14 @@ tags:
       <div class="col-12">
         <div class="content">
           <p class="lead">
-            ‘Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.
+            ‘Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and
+            an even more mysterious structure, the whole thing needed to get more down to earth.
           </p>
-          <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.</p>
+          <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience
+            Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to
+            provide comprehensive learning experiences for riders of every age and ability. From toddlers to
+            first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow
+            riders, shops and resorts to take their snowboard experience to the next level.</p>
         </div>
       </div>
     </div>
@@ -32,31 +38,36 @@ tags:
       <div class="col-md-4">
         <div class="content">
           <h4>Products</h4>
-          <p>Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-changing step-on bindings.</p>
+          <p>Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-changing
+            step-on bindings.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="content">
           <h4>Programs</h4>
-          <p>Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort rental offerings.</p>
+          <p>Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort
+            rental offerings.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="content">
           <h4>Places</h4>
-          <p>Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural terrain, and beyond.</p>
+          <p>Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural
+            terrain, and beyond.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-hero.jpg)"></div>
+<div class="bg-image bg-fixed aspect-hero my-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-hero.jpg)"></div>
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto">
+      <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis corporis similique in alias placeat at?</p>
+          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
+            tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis
+            corporis similique in alias placeat at?</p>
         </div>
       </div>
     </div>
