--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -3,97 +3,107 @@ layout: project
 quote: Reaching for the stars
 client: FIRST LAUNCH
 status: active
-summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.'
+summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something
+that hadn’t been done in previous years.'
 completion_date: 2019-01-01 00:00:00
-featured_image: /assets/img/projects/first-launch-project/first-launch-featured.jpg
-hero_image: /assets/img/projects/first-launch-project/first-launch-hero.jpg
+featured_image: '/assets/img/projects/first-launch-project/first-feature.jpg'
+hero_image: '/assets/img/projects/first-launch-project/first-work-banner.jpg'
 gallery:
-  - image:
-    caption:
+- image:
+caption:
 tags:
-  - animation
-  - branding
-  - illustration
-  - strategy
-  - web
+- animation
+- branding
+- illustration
+- strategy
+- web
 ---
 
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-12">
         <div class="content">
-          <p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related  elds. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
+          <p class="lead">FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related elds. Every
+            year FIRST holds a tournament comprising of four different competitions. Each competition presents a new
+            challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
+          <p>For 2019 Ocupop proposed developing a cohesive theme that would work across all four
+            competitions—something that
+            hadn’t been done in previous years.</p>
         </div>
       </div>
-      <div class="col-md-6">
+    </div>
+  </div>
+</section>
+<div class="bg-image bg-fixed aspect-hero my-5" style="background-image: url(/assets/img/projects/first-launch-project/first-work-parallax.jpg)"></div>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p>For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.</p>
+          <p class="lead">All four competitions would need identities that were distinctly different from one another
+            but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to
+            spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials
+            were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
+            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-work-01.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <p class="lead">All four competitions would need identities that were distinctly di erent from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-work-02.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-01-video.jpg)"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-02.jpg)"></div>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="content">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="d-flex h-100 flex-column justify-content-between">
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="content">
-          <div class="row">
-            <div class="col-md-8">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-07.jpg)"></div>
-            </div>
-            <div class="col-md-4">
-              <div class="d-flex h-100 flex-column justify-content-between">
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-12">
-              <div class="content">
-                <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
-              </div>
-            </div>
-          </div>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
         </div>
       </div>
     </div>
