--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -5,8 +5,8 @@ client: Google
 status: active
 summary: 'A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.'
 completion_date:
-featured_image: /assets/img/projects/gdd-project/gdd-feature-01.jpg
-hero_image: /assets/img/projects/gdd-project/gdd-feature-01.jpg
+featured_image: /assets/img/projects/gdd-project/google-feature.jpg
+hero_image: /assets/img/projects/gdd-project/google-work-banner.jpg
 gallery:
   - image:
     caption:
@@ -28,7 +28,7 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-03.jpg)"></div>
+<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/gdd-project/google-work-parallax.jpg)"></div>
 <section>
   <div class="container">
     <div class="row">
@@ -43,31 +43,31 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-02.jpg)"></div>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/google-work-01.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-05.jpg)"></div>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/google-work-02.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-09.jpg)"></div>
+          <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/google-work-05.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-07.jpg)"></div>
+          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/google-work-08.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-06.jpg)"></div>
+          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/google-work-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row mt-3">
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-10.jpg)"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-07.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-08.jpg)"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-06.jpg)"></div>
         </div>
       </div>
     </div>
