--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -5,8 +5,8 @@ client: HTML5 Logo for W3C
 status: active
 summary: 'We were honored to collaborate with the W3C and several prominent HTML advocates in creating the logo for HTML5.' 
 completion_date: 2011-03-10 00:00:00
-featured_image:
-hero_image:
+featured_image: /assets/img/projects/html5/html5-feature.jpg
+hero_image: /assets/img/projects/html5/html5-work-banner.jpg
 gallery:
   - image:
     caption:
@@ -16,17 +16,48 @@ tags:
   - apparel
 ---
 
+<section class="pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p class="lead">The organization that vows to lead the Web to its full potential came to us and said, ‘I think we need to design a logo for HTML5.’ Once we’d privately and profanely expressed our excitement, we didn’t wait for them to ask twice.</p>
+          <p>Such a unique and potentially important project is once in a lifetime opportunity—the context of universal adoption and unfettered usage was like no other design challenge we’ve faced. We are exceedingly proud of the solutions generated and the level of design integrity maintained throughout. The W3C staff was truly incredible in their commitment to a reasoned, informed design process and dutifully sought to keep its membership informed about the project.</p>
+          <!-- <p>The HTLML5 logo goes beyond simply representing the HTML5 spec to embody the technology, and the open web movement, at its core. This starts with standardization — the logo and its progeny follow very strict geometric rules providing an incredibly adaptable yet stable and stylish identity. As you’ve hopefully seen out on the web, the logo, the icons, the colors and the type all work, and work well, in nearly every imaginable context (and probably contexts beyond our imaginations). From favicons to billboards, cupcakes to fighter jets this mark was designed to hold together in the face any manipulation. Through simple adjustment of hue, the logo conveys depth and dimension without dated or awkward flourishes. With just two shades of orange and two shades of gray, the standard logo offers a thoroughly refined and assuredly lasting visual impact. The container for the logo is shaped as a badge, implying both the formality and respect an undertaking of this magnitude demands, but also as a homage to the progressive community that proudly, and relentlessly, ushers in the future of web technologies. Simultaneously a badge of honor and a coat of arms, this crest represents the spirit and substance of the open web platform and the forward thinking community making it a reality.</p>
+          
+          <p>Why orange? Orange is a very hot, fast, and striking color, but not nearly as intimidating or aggressive as red. Orange implies excitement, yet with undertones of caution. Orange grabs your attention, but doesn’t scream for it. In Chinese color theory, orange is the color of organization. In medieval heraldry, orange was symbolic of strength and endurance. Sexy with a safety net, organized, powerful and lasting. HTML5, this logo, and orange go quite well together.</p>
+          <p>The best T-Shirt ever? Certainly the best HTML logo T-shirt ever. (picture from Silicon Valley). Get yours from Ocupop today!</p> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/html5/html5-work-parallax.jpg)"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content editable">
-          <p>The organization that vows to lead the Web to its full potential came to us and said, ‘I think we need to design a logo for HTML5.’ Once we’d privately and profanely expressed our excitement, we didn’t wait for them to ask twice.</p>
-          <p>Such a unique and potentially important project is once in a lifetime opportunity—the context of universal adoption and unfettered usage was like no other design challenge we’ve faced. We are exceedingly proud of the solutions generated and the level of design integrity maintained throughout. The W3C staff was truly incredible in their commitment to a reasoned, informed design process and dutifully sought to keep its membership informed about the project.</p>
-          <p>The HTLML5 logo goes beyond simply representing the HTML5 spec to embody the technology, and the open web movement, at its core. This starts with standardization — the logo and its progeny follow very strict geometric rules providing an incredibly adaptable yet stable and stylish identity. As you’ve hopefully seen out on the web, the logo, the icons, the colors and the type all work, and work well, in nearly every imaginable context (and probably contexts beyond our imaginations). From favicons to billboards, cupcakes to fighter jets this mark was designed to hold together in the face any manipulation. Through simple adjustment of hue, the logo conveys depth and dimension without dated or awkward flourishes. With just two shades of orange and two shades of gray, the standard logo offers a thoroughly refined and assuredly lasting visual impact. The container for the logo is shaped as a badge, implying both the formality and respect an undertaking of this magnitude demands, but also as a homage to the progressive community that proudly, and relentlessly, ushers in the future of web technologies. Simultaneously a badge of honor and a coat of arms, this crest represents the spirit and substance of the open web platform and the forward thinking community making it a reality.</p>
-          <p>Formal and fun, forward and fully evolved, this HTML5 logo is imminently extensible yet refreshingly complete — the W3C encourages you to use it as-is or build on it to make it even better. Just like the technology it lives amidst, setting a common and comprehensive baseline is just the beginning.</p>
-          <p>Why orange? Orange is a very hot, fast, and striking color, but not nearly as intimidating or aggressive as red. Orange implies excitement, yet with undertones of caution. Orange grabs your attention, but doesn’t scream for it. In Chinese color theory, orange is the color of organization. In medieval heraldry, orange was symbolic of strength and endurance. Sexy with a safety net, organized, powerful and lasting. HTML5, this logo, and orange go quite well together.</p>
-          <p>The best T-Shirt ever? Certainly the best HTML logo T-shirt ever. (picture from Silicon Valley). Get yours from Ocupop today!</p>
+        <div class="content">
+          <p class="lead">Formal and fun, forward and fully evolved, this HTML5 logo is imminently extensible yet refreshingly complete — the
+            W3C encourages you to use it as-is or build on it to make it even better. Just like the technology it lives amidst,
+            setting a common and comprehensive baseline is just the beginning.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="/assets/img/projects/html5/html5-work-01.svg" alt="HTML 5 logo pile image">
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/html5/html5-work-02.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/html5/html5-work-03.jpg)"></div>
         </div>
       </div>
     </div>
