--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -6,7 +6,7 @@ status: active
 summary: 'Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.'
 completion_date: 2014-08-20 00:00:00
 featured_image: /assets/img/projects/kunoa/kunoa-feature.jpg
-hero_image:
+hero_image: /assets/img/projects/kunoa/kunoa-work-banner.jpg
 tags:
   - branding
   - web
@@ -26,7 +26,7 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/kunoa/kunoa-hero.jpg)"></div>
+<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-parallax.png)"></div>
 <section>
   <div class="container">
     <div class="row">
@@ -41,44 +41,58 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/kunoa/kunoa-project-01.jpg)"></div>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-01.jpg)"></div>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/kunoa/kunoa-feature.jpg)"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-03.jpg)"></div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-07.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-02.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-02.jpg')"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-04.jpg')"></div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-08.jpg')"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-06.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-05.jpg')"></div>
-        </div>
-        <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-06.jpg')"></div>
+          <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-05.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-03.jpg')"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-09.svg')"></div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-07.jpg')"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-08.svg')"></div>
         </div>
       </div>
     </div>
