--- a/src/contact.html
+++ b/src/contact.html
@@ -62,21 +62,21 @@ title: Contact
         <div class="content">
           <div class="row">
             <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+              <div class="bg-image aspect-4x3 mt-4" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
             </div>
             <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+              <div class="bg-image aspect-4x3 mt-4" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
             </div>
           </div>
-          <div class="row mt-5">
+          <div class="row">
             <div class="col-md-4">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
             </div>
             <div class="col-md-4">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
             </div>
             <div class="col-md-4">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
             </div>
           </div>
         </div>
