homepage responsive styles

--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -50,7 +50,7 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-6">
         <div class="content">
           <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
@@ -68,7 +68,6 @@ tags:
           <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
-
