--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -6,8 +6,8 @@ client: 'Mapbox: Locate'
 status: active
 summary: 'Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products.'
 completion_date:
-hero_image:
-featured_image:
+hero_image: '/assets/img/projects/mapbox-locate/locate-work-banner.jpg'
+featured_image: '/assets/img/projects/mapbox-locate/locate-feature.jpg'
 gallery:
   - image:
     caption:
@@ -17,7 +17,7 @@ tags:
   - events
 ---
 
-<section>
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -33,13 +33,13 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<div class="bg-image bg-fixed aspect-hero" style="background-image: url('/assets/img/projects/mapbox-locate/locate-work-parallax.png')"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-10 mx-md-auto">
         <div class="content">
-          <p class="lead">
+          <p class="text-large">
             Working on a tight timeline and a remarkable scale, Ocupop designed the 'Locate' visual system to celebrate Mapbox's authentic position at the leading edge of location data and the passionate community that joins them there.
           </p>
         </div>
@@ -52,41 +52,32 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-04.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-01.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-06.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-02.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-05.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content">
-          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-03.jpg)"></div>
         </div>
       </div>
     </div>
