Added testimonial form and refactored include a form layout for all client collection forms

--- a/src/forms/message-strategy.html
+++ b/src/forms/message-strategy.html
@@ -1,6 +1,7 @@
 ---
-layout: message-strategy
+layout: form
 title: Message Strategy
+permalink: /message-strategy/questionaire
 ---
 
 <section class="pt-0">
