--- a/src/contact.html
+++ b/src/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Contact
+testimonial: true
 ---
 <section id="page-intro">
   <div class="container">
@@ -55,6 +56,7 @@ title: Contact
     </div>
   </div>
 </section>
+
 <section>
   <div class="container">
     <div class="row">
