--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -30,7 +30,7 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero my-5" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg)"></div>
+<div class="bg-image bg-fixed rellax aspect-hero my-5" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg)"></div>
 <section>
   <div class="container">
     <div class="row align-items-center">
