project parallax example

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -36,17 +36,10 @@ tags:
     <div class="row align-items-center">
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to
-            maintain
-            the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
-            phonetically
-            spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
-            for
-            true
-            craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply
-            the
-            same
-            ideas to their rebrand.</p>
+          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
+            phonetically spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
+            for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply
+            the same ideas to their rebrand.</p>
         </div>
       </div>
     </div>
@@ -57,10 +50,10 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-01.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-01.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-02.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-02.jpg)"></div>
         </div>
       </div>
     </div>
@@ -79,7 +72,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
         </div>
       </div>
     </div>
