parallax effect using jquery-parallax.js

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -30,7 +30,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed rellax aspect-hero my-5" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg)"></div>
+<!-- <div class="bg-image bg-fixed rellax aspect-hero my-5" data-rellax-percentage="0.5" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg)"></div> -->
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg" data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row align-items-center">
