project page updates, add website showcase feature carousel

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -30,7 +30,6 @@ tags:
     </div>
   </div>
 </section>
-<!-- <div class="bg-image bg-fixed rellax aspect-hero my-5" data-rellax-percentage="0.5" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg)"></div> -->
 <div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg" data-speed="0.8"></div>
 <section>
   <div class="container">
@@ -60,12 +59,12 @@ tags:
     </div>
     <div class="row align-items-center">
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-03.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-04.jpg)"></div>
         </div>
       </div>
@@ -74,13 +73,6 @@ tags:
       <div class="col-12">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="content">
-          <img src="https://via.placeholder.com/1200x600?text=Website+feature" class="img-fluid" alt="">
         </div>
       </div>
     </div>
