--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -35,13 +35,14 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero my-5" style="background-image: url(/assets/img/projects/first-launch-project/first-work-parallax.jpg)"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/first-launch-project/first-work-parallax.jpg"
+  data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p class="lead">All four competitions would need identities that were distinctly different from one another
+          <p>All four competitions would need identities that were distinctly different from one another
             but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to
             spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials
             were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
@@ -55,25 +56,25 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
+          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="500" frameborder="0"
             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-work-01.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-01.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-6">
-        <div class="content">
+      <div class="col-md-6">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
         </div>
       </div>
-      <div class="col-lg-6">
-        <div class="content">
+      <div class="col-md-6">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
         </div>
       </div>
@@ -81,21 +82,21 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-work-02.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-02.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-6">
-        <div class="content">
+      <div class="col-md-6">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
         </div>
       </div>
-      <div class="col-lg-6">
-        <div class="content">
+      <div class="col-md-6">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
         </div>
       </div>
@@ -103,7 +104,49 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div id="carousel-web-showcase" class="carousel slide" data-ride="carousel" data-interval="false">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-web-showcase" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="1"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="2"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="3"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-01.jpg" alt="First Web Image">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-02.jpg" alt="First Web Image">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-03.jpg" alt="First Web Image">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-04.jpg" alt="First Web Image">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-05.jpg" alt="First Web Image">
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carousel-web-showcase" role="button" data-slide="prev">
+            <i class="arrow arrow-left"></i>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-web-showcase" role="button" data-slide="next">
+            <i class="arrow arrow-right"></i>
+            <span class="sr-only">Next</span>
+          </a>
+
+          
         </div>
       </div>
     </div>
