--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -32,7 +32,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/html5/html5-work-parallax.jpg)"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="{{ site.placeholders.hero }}"
+  data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
@@ -57,7 +58,35 @@ tags:
           <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/html5/html5-work-02.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/html5/html5-work-03.jpg)"></div>
+          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.hero }})"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div id="carousel-web-showcase" class="carousel slide" data-ride="carousel" data-interval="false">
+            <!-- <ol class="carousel-indicators">
+              <li data-target="#carousel-web-showcase" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="1"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="2"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="3"></li>
+              <li data-target="#carousel-web-showcase" data-slide-to="4"></li>
+            </ol> -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="/assets/img/projects/html5/HTML5-work-web-01.jpg" alt="First Web Image">
+              </div>
+            </div>
+          </div>
+          <!-- <a class="carousel-control-prev" href="#carousel-web-showcase" role="button" data-slide="prev">
+            <i class="arrow arrow-left"></i>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-web-showcase" role="button" data-slide="next">
+            <i class="arrow arrow-right"></i>
+            <span class="sr-only">Next</span>
+          </a> -->
         </div>
       </div>
     </div>
