update all projects with parallax effect, typography and spacing fixes

--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -59,13 +59,14 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero my-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-hero.jpg)"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/burtonltr-project/burtonltr-hero.jpg"
+  data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
+          <p class="text-large mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
             tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis
             corporis similique in alias placeat at?</p>
         </div>
@@ -78,25 +79,25 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <div class="content">
-          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
+        <div class="content pr-md-1">
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content">
-          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
+        <div class="content pl-md-1">
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
         </div>
       </div>
     </div>
