--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -33,13 +33,14 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero" style="background-image: url('/assets/img/projects/mapbox-locate/locate-work-parallax.png')"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/mapbox-locate/locate-work-parallax.png"
+  data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-10 mx-md-auto">
         <div class="content">
-          <p class="text-large">
+          <p class="text-large mb-0">
             Working on a tight timeline and a remarkable scale, Ocupop designed the 'Locate' visual system to celebrate Mapbox's authentic position at the leading edge of location data and the passionate community that joins them there.
           </p>
         </div>
@@ -71,12 +72,12 @@ tags:
     </div>
     <div class="row">
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pr-md-0">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-05.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pl-md-0">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-03.jpg)"></div>
         </div>
       </div>
