--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -42,7 +42,7 @@ tags:
     <div class="row">
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p>All four competitions would need identities that were distinctly different from one another
+          <p class="text-large mb-0">All four competitions would need identities that were distinctly different from one another
             but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to
             spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials
             were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
@@ -56,7 +56,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="500" frameborder="0"
+          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
         <div class="content">
