--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -28,45 +28,53 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/gdd-project/google-work-parallax.jpg)"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/gdd-project/google-work-parallax.jpg"
+  data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-10 mx-md-auto">
         <div class="content">
-          <p class="lead">
-            Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing experience for attendees and Googlers alike.
+          <p class="text-large mb-0">
+            Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative
+            development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale
+            selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing
+            experience for attendees and Googlers alike.
           </p>
         </div>
       </div>
     </div>
+  </div>
+</section>  
+<section class="pt-0">
+  <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/google-work-01.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-01.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/google-work-02.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-02.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/google-work-05.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-05.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/google-work-08.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-08.jpg)"></div>
         </div>
         <div class="content">
-          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/google-work-03.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row mt-3">
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-07.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-06.jpg)"></div>
         </div>
       </div>
