--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -26,53 +26,58 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-parallax.png)"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/kunoa/kunoa-work-parallax.png" data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-10 mx-md-auto">
         <div class="content">
-          <p class="lead">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat molestiae magnam esse officia voluptas possimus architecto eius, nobis eaque, minima voluptatibus? Totam autem amet explicabo ipsa exercitationem non dignissimos molestias.
+          <p class="text-large mb-0">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat molestiae magnam esse officia voluptas
+            possimus architecto eius, nobis eaque, minima voluptatibus? Totam autem amet explicabo ipsa exercitationem non
+            dignissimos molestias.
           </p>
         </div>
       </div>
     </div>
+  </div>
+</section>
+<section class="pt-0">
+  <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-01.jpg)"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-01.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-6">
-        <div class="content">
+      <div class="col-md-6">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-lg-6">
-        <div class="content">
+      <div class="col-md-6">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-07.jpg)"></div>
         </div>
       </div>
     </div>
-    
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-02.jpg')"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-02.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-04.jpg')"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-06.jpg')"></div>
         </div>
       </div>
@@ -80,18 +85,18 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-05.jpg')"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-05.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-09.svg')"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-08.svg')"></div>
         </div>
       </div>
