--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -28,13 +28,14 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image bg-fixed aspect-hero" style="background-image: url(/assets/img/projects/pbs/pbs-work-parallax.jpg)"></div>
+<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/pbs/pbs-work-parallax.jpg"
+  data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <p class="lead mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis laboriosam fugiat qui, beatae tempora eius rerum ex mollitia maxime aliquid quas vero, doloremque culpa accusamus. Quam voluptatibus adipisci error doloribus!</p>
+          <p class="text-large mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis laboriosam fugiat qui, beatae tempora eius rerum ex mollitia maxime aliquid quas vero, doloremque culpa accusamus. Quam voluptatibus adipisci error doloribus!</p>
         </div>
       </div>
     </div>
